_BACKUP/z_HTML-VERSIONS/version2/bgoonz42.gitbook.io/datastructures-in-pytho/quick-reference/bash-commands.md
<a href="../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="../index.html" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1630798188535.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Main Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-195c575e--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<a href="../cirriculumn/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../resources/code-signal-cga-sprint-resources.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code Signal CGA Sprint Resources</span></a>

<a href="../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../misc/untitled/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="python-module-index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span></a>

<a href="untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca--navButtonOpened-6a88552e"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Python-Docs</span></span>

<a href="../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<a href="../stdlib/built-in-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../interview-prep/interview-resources/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="../installations-setup-and-env/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">List Of Python Cheat Sheets</span>
================================================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="82b33a185388444a9cee2a6811097766"><span data-offset-key="82b33a185388444a9cee2a6811097766:0"><span data-slate-zero-width="n">​</span></span></span></span>

    ​

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1c259deb8ed54732842e85da2c6ddac7"><span data-offset-key="1c259deb8ed54732842e85da2c6ddac7:0">Table of Contents</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="de1f304ef25a4e12bc210559594a3e33"><span data-offset-key="de1f304ef25a4e12bc210559594a3e33:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#Best_Python_Cheat_Sheets" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="489377c054ee4483a63cca3a38dfa2b8"><span data-offset-key="489377c054ee4483a63cca3a38dfa2b8:0">Best Python Cheat Sheets</span></span></a><span data-key="273d493a1b5944c2b69312ae23067581"><span data-offset-key="273d493a1b5944c2b69312ae23067581:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bcb2ba7508fb414c84d349bee0652c72"><span data-offset-key="bcb2ba7508fb414c84d349bee0652c72:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#1_Python_3_Cheat_Sheet" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="f31321b6e54445ec92c8cf4f8511514d"><span data-offset-key="f31321b6e54445ec92c8cf4f8511514d:0">(1) Python 3 Cheat Sheet</span></span></a><span data-key="b7f5523dd6be413990a5e5aa8546b0b7"><span data-offset-key="b7f5523dd6be413990a5e5aa8546b0b7:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="21020b2c2a704fd7ac1c3a2330cd25b0"><span data-offset-key="21020b2c2a704fd7ac1c3a2330cd25b0:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#2_Python_Beginner_Cheat_Sheet" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="2b7ea844c13044eca29759464650201c"><span data-offset-key="2b7ea844c13044eca29759464650201c:0">(2) Python Beginner Cheat Sheet</span></span></a><span data-key="7bd8c51dca874230b19f1aac6fce6019"><span data-offset-key="7bd8c51dca874230b19f1aac6fce6019:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="dcc2bc0b76fa4161a58c91293ccd6f4b"><span data-offset-key="dcc2bc0b76fa4161a58c91293ccd6f4b:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#3_Python_for_Data_Science" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="d994fdbe8c00404dbdd10dfa3e76fdca"><span data-offset-key="d994fdbe8c00404dbdd10dfa3e76fdca:0">(3) Python for Data Science</span></span></a><span data-key="9be3cd4d92c542d8b7f7c1c2c853d383"><span data-offset-key="9be3cd4d92c542d8b7f7c1c2c853d383:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9109b15a290b4e0db494cc288ddd4ae9"><span data-offset-key="9109b15a290b4e0db494cc288ddd4ae9:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#4_Python_for_Data_Science_Importing_Data" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="261a6d7a567941998860fce3f1cc1199"><span data-offset-key="261a6d7a567941998860fce3f1cc1199:0">(4) Python for Data Science (Importing Data)</span></span></a><span data-key="08e370b9602d4da9abcfdacc84d1483d"><span data-offset-key="08e370b9602d4da9abcfdacc84d1483d:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0feb3159c7da418a80f4092842105f1b"><span data-offset-key="0feb3159c7da418a80f4092842105f1b:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#5_Python_Cheatography_Cheat_Sheet" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="32dd471a3cf9431089970e23f8277665"><span data-offset-key="32dd471a3cf9431089970e23f8277665:0">(5) Python Cheatography Cheat Sheet</span></span></a><span data-key="aa66315d3ef448b0a6d3ba6bffe3b5ff"><span data-offset-key="aa66315d3ef448b0a6d3ba6bffe3b5ff:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="742d6c97b519449ba773a06657d46545"><span data-offset-key="742d6c97b519449ba773a06657d46545:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#6_The_Ultimative_Python_Cheat_Sheet_Course_5x_Email_Series" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="48b30d14a7e14bcca4addf64eb315961"><span data-offset-key="48b30d14a7e14bcca4addf64eb315961:0">(6) The Ultimative Python Cheat Sheet Course (5x Email Series)</span></span></a><span data-key="018f593b6823436b8376ff27cedfa56c"><span data-offset-key="018f593b6823436b8376ff27cedfa56c:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="cae2dd89562346e99f7d01f8de3128de"><span data-offset-key="cae2dd89562346e99f7d01f8de3128de:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#7_Dataquest_Data_Science_Cheat_Sheet_-_Python_Basics" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="05ff473f48e04c4ba7b2e1ad3e2d6894"><span data-offset-key="05ff473f48e04c4ba7b2e1ad3e2d6894:0">(7) Dataquest Data Science Cheat Sheet – Python Basics</span></span></a><span data-key="c6bd6c1588b24b7b9c841788a5a71e0a"><span data-offset-key="c6bd6c1588b24b7b9c841788a5a71e0a:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5ef704623e824a67abebcf9647f9ca7c"><span data-offset-key="5ef704623e824a67abebcf9647f9ca7c:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#8_Dataquest_Data_Science_Cheat_Sheet_-_Intermediate" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="2e545a0f660b4ce68200e84dcc52d09e"><span data-offset-key="2e545a0f660b4ce68200e84dcc52d09e:0">(8) Dataquest Data Science Cheat Sheet – Intermediate</span></span></a><span data-key="7f97df45ee504d81ab51e61b947e3fad"><span data-offset-key="7f97df45ee504d81ab51e61b947e3fad:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="aaa54e3772684499b6464629688e3328"><span data-offset-key="aaa54e3772684499b6464629688e3328:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#9_Dataquest_NumPy" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="b28e5c9dd22c4ec6b982d280c49a2da4"><span data-offset-key="b28e5c9dd22c4ec6b982d280c49a2da4:0">(9) Dataquest NumPy</span></span></a><span data-key="b4f9e9203d9f4045800ec615882fb3f9"><span data-offset-key="b4f9e9203d9f4045800ec615882fb3f9:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="63a721747058429ba82cc59e45cfda5e"><span data-offset-key="63a721747058429ba82cc59e45cfda5e:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#10_Python_For_Data_Science_Bokeh" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="55ebc3f31ffb44ae8b09d8263594b878"><span data-offset-key="55ebc3f31ffb44ae8b09d8263594b878:0">(10) Python For Data Science (Bokeh)</span></span></a><span data-key="8eb498ae3cdd4f67844a7b83d594d650"><span data-offset-key="8eb498ae3cdd4f67844a7b83d594d650:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6f09e642126d4e08a8c14b3884669b3a"><span data-offset-key="6f09e642126d4e08a8c14b3884669b3a:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#11_Pandas_Cheat_Sheet_for_Data_Science" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="43116c348f5045dfa7b8773e2b21e569"><span data-offset-key="43116c348f5045dfa7b8773e2b21e569:0">(11) Pandas Cheat Sheet for Data Science</span></span></a><span data-key="0b61a9aa32df49c58d2679021dab5060"><span data-offset-key="0b61a9aa32df49c58d2679021dab5060:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3e4a2c306c924ec9a3dcb2dd35213b9c"><span data-offset-key="3e4a2c306c924ec9a3dcb2dd35213b9c:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#12_Regular_Expressions_Cheat_Sheet" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="d089d486bdb44d3bbc65db7d3db291c1"><span data-offset-key="d089d486bdb44d3bbc65db7d3db291c1:0">(12) Regular Expressions Cheat Sheet</span></span></a><span data-key="2d697c68367944d1b68c17079b9c916f"><span data-offset-key="2d697c68367944d1b68c17079b9c916f:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e7e540fee449483b8ab9d478460eedfb"><span data-offset-key="e7e540fee449483b8ab9d478460eedfb:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#13_The_Worlds_Most_Concise_Python_Cheat_Sheet" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="6f3c576899b44dfe89f8799d43fe1478"><span data-offset-key="6f3c576899b44dfe89f8799d43fe1478:0">(13) The World’s Most Concise Python Cheat Sheet</span></span></a><span data-key="ffda65d85d4b4063b3fcf1f2c53bc9d9"><span data-offset-key="ffda65d85d4b4063b3fcf1f2c53bc9d9:0"><span data-slate-zero-width="z">​</span></span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5189e61d64d646c5911524f4577e003c"><span data-offset-key="5189e61d64d646c5911524f4577e003c:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#What_Cheat_Sheets_are_NOT_a_Replacement_For" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="c76c2a72a7c44e7f8cc9ebee9848f89f"><span data-offset-key="c76c2a72a7c44e7f8cc9ebee9848f89f:0">What Cheat Sheets are NOT a Replacement For</span></span></a><span data-key="c0df6f72c3db47b3945b0481c4986ede"><span data-offset-key="c0df6f72c3db47b3945b0481c4986ede:0"><span data-slate-zero-width="z">​</span></span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4613bd4fb7454f83bfa52cd67106a1de"><span data-offset-key="4613bd4fb7454f83bfa52cd67106a1de:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#Cheat_Sheet_Alternatives" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="341e6cd3d8eb4dca9f5c7eb6265c5ff1"><span data-offset-key="341e6cd3d8eb4dca9f5c7eb6265c5ff1:0">Cheat Sheet Alternatives</span></span></a><span data-key="335f6c3cf8414ceb9664c1e1c4db2e08"><span data-offset-key="335f6c3cf8414ceb9664c1e1c4db2e08:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e5346a92a0504bb88b2172b5f9a8fe66"><span data-offset-key="e5346a92a0504bb88b2172b5f9a8fe66:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#Flashcards" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="1462055892604a7797cfa8b9d58784ed"><span data-offset-key="1462055892604a7797cfa8b9d58784ed:0">Flashcards</span></span></a><span data-key="9cddb961ae0d4f9a97ac580ba39821b5"><span data-offset-key="9cddb961ae0d4f9a97ac580ba39821b5:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c8165afd6db941f6ab452f317af4f2f0"><span data-offset-key="c8165afd6db941f6ab452f317af4f2f0:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#Personalised_Cheat_Sheets" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="857bb57984d9442ab0b83cc62394f140"><span data-offset-key="857bb57984d9442ab0b83cc62394f140:0">Personalised Cheat Sheets</span></span></a><span data-key="09c7c950ef714063a452deaecba18955"><span data-offset-key="09c7c950ef714063a452deaecba18955:0"><span data-slate-zero-width="z">​</span></span></span></span>

    -   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1f628dbfd0b1424bb9ac1a91adb5e484"><span data-offset-key="1f628dbfd0b1424bb9ac1a91adb5e484:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#Projects" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="7caf5c540c2c428ca34eb0f7c2399e2c"><span data-offset-key="7caf5c540c2c428ca34eb0f7c2399e2c:0">Projects</span></span></a><span data-key="0c0baa6331c143e6aa8adb9fcf0637bf"><span data-offset-key="0c0baa6331c143e6aa8adb9fcf0637bf:0"><span data-slate-zero-width="z">​</span></span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="13ca0c4d7d2d4aceb22fd2020b3fe974"><span data-offset-key="13ca0c4d7d2d4aceb22fd2020b3fe974:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#Summary" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="0a0a67155d854fd4b62b0ebce1744a39"><span data-offset-key="0a0a67155d854fd4b62b0ebce1744a39:0">Summary</span></span></a><span data-key="f2f6eaec86134a8aad54311354b9cd91"><span data-offset-key="f2f6eaec86134a8aad54311354b9cd91:0"><span data-slate-zero-width="z">​</span></span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5f0786f3d7de47269afe6db01c5de189"><span data-offset-key="5f0786f3d7de47269afe6db01c5de189:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/collection-5-cheat-sheets-every-python-coder-must-own/#Related_Posts" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="749be99591a54dca8e49f2ec73cf448f"><span data-offset-key="749be99591a54dca8e49f2ec73cf448f:0">Related Posts</span></span></a><span data-key="c1b7ee75b4ea47d7a605625cbcde3a96"><span data-offset-key="c1b7ee75b4ea47d7a605625cbcde3a96:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="08193ee736f043ff974e95a71b904265"><span data-offset-key="08193ee736f043ff974e95a71b904265:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="152e0e20c8644dbf8b7993b69b0b22ac"><span data-offset-key="152e0e20c8644dbf8b7993b69b0b22ac:0">Best Python Cheat Sheets</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fcfc6e1ec46546128da54e744009a3c3"><span data-offset-key="fcfc6e1ec46546128da54e744009a3c3:0">So let’s dive into the best Python cheat sheets recommended by us.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="5c154291872b40c5bd5761a718d7d9b6"><span data-offset-key="5c154291872b40c5bd5761a718d7d9b6:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://perso.limsi.fr/pointal/_media/python:cours:mementopython3-english.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="d2aa81c294f74a8ba78c2c791cc2c447"><span data-offset-key="d2aa81c294f74a8ba78c2c791cc2c447:0"><strong>(1) Python 3 Cheat Sheet</strong></span></span></a><span data-key="cd0557ec8c884032bf669699ed1edb58"><span data-offset-key="cd0557ec8c884032bf669699ed1edb58:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d5f0f581921f404b81d7431793d02445"><span data-offset-key="d5f0f581921f404b81d7431793d02445:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://perso.limsi.fr/pointal/_media/python:cours:mementopython3-english.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="5ed1deb5c66f49eaa1a2e887cf7ff2ff"><span data-offset-key="5ed1deb5c66f49eaa1a2e887cf7ff2ff:0"><span data-slate-zero-width="z">​</span></span></span><span data-slate-void="true" data-key="9e30230a56354f3da52268ea74cbb608"><span><span class="reset-3c756112--frameInlineVoid-73b6a96b" data-key="9e30230a56354f3da52268ea74cbb608"><img src="https://blog.finxter.com/wp-content/uploads/2019/03/grafik.png" class="image-67b14f24--image-54d049be" /></span></span></span><span data-key="13dc2464cc9b4c00879aee2d848eba94"><span data-offset-key="13dc2464cc9b4c00879aee2d848eba94:0"><span data-slate-zero-width="z">​</span></span></span></a><span data-key="c23477677c864dc186fb7cdd68df1560"><span data-offset-key="c23477677c864dc186fb7cdd68df1560:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="00b08b05212d49b0bd0f6e01a2f9b00a"><span data-offset-key="00b08b05212d49b0bd0f6e01a2f9b00a:0">This is the best single cheat sheet. It uses every inch of the page to deliver value and covers everything you need to know to go from beginner to intermediate. Topics covered include container types, conversions, modules, maths, conditionals and formatting to name a few. A highly recommended 2-page sheet!</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="603d1b5887654557a4c815ac2d5b4ea1"><span data-offset-key="603d1b5887654557a4c815ac2d5b4ea1:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://github.com/ehmatthes/pcc/releases/download/v1.0.0/beginners_python_cheat_sheet_pcc_all.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="9d3d3a7b43024757a6e987a190014ba6"><span data-offset-key="9d3d3a7b43024757a6e987a190014ba6:0"><strong>(2) Python Beginner Cheat Sheet</strong></span></span></a><span data-key="1fffe66772ac40f2b7cecc5a4db627d0"><span data-offset-key="1fffe66772ac40f2b7cecc5a4db627d0:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0d97533e57214538b4211126297632e4"><span data-offset-key="0d97533e57214538b4211126297632e4:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://github.com/ehmatthes/pcc/releases/download/v1.0.0/beginners_python_cheat_sheet_pcc_all.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="3aaaa93c2cc149b884b9f1d31650fd18"><span data-offset-key="3aaaa93c2cc149b884b9f1d31650fd18:0"><span data-slate-zero-width="z">​</span></span></span><span data-slate-void="true" data-key="3b73f26c5da24c4ab700bcee53f92b93"><span><span class="reset-3c756112--frameInlineVoid-73b6a96b" data-key="3b73f26c5da24c4ab700bcee53f92b93"><img src="https://blog.finxter.com/wp-content/uploads/2019/03/grafik-1.png" class="image-67b14f24--image-54d049be" /></span></span></span><span data-key="ee06a6c86e674eee84a6b57ffd01a351"><span data-offset-key="ee06a6c86e674eee84a6b57ffd01a351:0"><span data-slate-zero-width="z">​</span></span></span></a><span data-key="f09e44d324604f77b381981d4ee270c5"><span data-offset-key="f09e44d324604f77b381981d4ee270c5:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c76af4efe3b14ee48a350aecfac2147a"><span data-offset-key="c76af4efe3b14ee48a350aecfac2147a:0">Some might think this cheat sheet is a bit lengthy. At 26 pages, it is the most comprehensive cheat sheets out there. It explains variables, data structures, exceptions, and classes – to name just a few. If you want the most thorough cheat sheet, pick this one.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="301c87ccbb5449c3a6e334456357eeef"><span data-offset-key="301c87ccbb5449c3a6e334456357eeef:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/assets.datacamp.com/blog_assets/PythonForDataScience.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="ba5c492a8f7742db846e675626dcdb34"><span data-offset-key="ba5c492a8f7742db846e675626dcdb34:0"><strong>(3) Python for Data Science</strong></span></span></a><span data-key="a16f54f2dfde4ab4ab595abb5bae263c"><span data-offset-key="a16f54f2dfde4ab4ab595abb5bae263c:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="535d6f3ed95349219458d5ea1ff8454b"><span data-offset-key="535d6f3ed95349219458d5ea1ff8454b:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/assets.datacamp.com/blog_assets/PythonForDataScience.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="775264d4293b4e158bb6b93201351aab"><span data-offset-key="775264d4293b4e158bb6b93201351aab:0"><span data-slate-zero-width="z">​</span></span></span><span data-slate-void="true" data-key="68f1f35bf3ba4a7382bc0ad2fa1d9b70"><span><span class="reset-3c756112--frameInlineVoid-73b6a96b" data-key="68f1f35bf3ba4a7382bc0ad2fa1d9b70"><img src="https://blog.finxter.com/wp-content/uploads/2019/03/grafik-2.png" class="image-67b14f24--image-54d049be" /></span></span></span><span data-key="f802ed80955046b7b1460edb4bb0dbed"><span data-offset-key="f802ed80955046b7b1460edb4bb0dbed:0"><span data-slate-zero-width="z">​</span></span></span></a><span data-key="9c53b590b5524313aa8d5b1ba97c51c1"><span data-offset-key="9c53b590b5524313aa8d5b1ba97c51c1:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7e4ce5fb48ea4cf8a9ad00ab18e5ccee"><span data-offset-key="7e4ce5fb48ea4cf8a9ad00ab18e5ccee:0">Some of the most popular things to do with Python are </span></span><a href="https://blog.finxter.com/artificial-intelligence-machine-learning-deep-learning-and-data-science-whats-the-difference/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="18b37d376ad0440eb237797981a75887"><span data-offset-key="18b37d376ad0440eb237797981a75887:0">Data Science and Machine Learning</span></span></a><span data-key="395587df998445c9be8669b1916c855c"><span data-offset-key="395587df998445c9be8669b1916c855c:0">. In this cheat sheet, you will learn the basics of Python and the most important scientific library:</span></span><a href="https://blog.finxter.com/numpy-tutorial/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="63b1dac76a094636b214a551a82ec872"><span data-offset-key="63b1dac76a094636b214a551a82ec872:0"> NumPy</span></span></a><span data-key="19f3013fa4a34c0bba0d7e8a0da5495c"><span data-offset-key="19f3013fa4a34c0bba0d7e8a0da5495c:0"> (Numerical Python). You’ll learn the basics plus the most important NumPy functions. If you are using Python for Data Science, download this cheat sheet.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="58300b53779c4ff6b81b23c70305a9b0"><span data-offset-key="58300b53779c4ff6b81b23c70305a9b0:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Cheat+Sheets/Importing_Data_Python_Cheat_Sheet.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="ba503bd39c8e4b90b3b7ad48a0d5b955"><span data-offset-key="ba503bd39c8e4b90b3b7ad48a0d5b955:0"><strong>(4) Python for Data Science (Importing Data)</strong></span></span></a><span data-key="efe512e83d52447fae887b019c2cf839"><span data-offset-key="efe512e83d52447fae887b019c2cf839:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0dfa3f5fa6c543de8a58471f0a75886b"><span data-offset-key="0dfa3f5fa6c543de8a58471f0a75886b:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Cheat+Sheets/Importing_Data_Python_Cheat_Sheet.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="84d7d4ff163045ddaab708a644cfd980"><span data-offset-key="84d7d4ff163045ddaab708a644cfd980:0"><span data-slate-zero-width="z">​</span></span></span><span data-slate-void="true" data-key="e0b5e109cd8242a68e58991c11d1b3d8"><span><span class="reset-3c756112--frameInlineVoid-73b6a96b" data-key="e0b5e109cd8242a68e58991c11d1b3d8"><img src="https://blog.finxter.com/wp-content/uploads/2020/06/image-2.png" class="image-67b14f24--image-54d049be" /></span></span></span><span data-key="9667c0adfbc94be2b900af04f197d955"><span data-offset-key="9667c0adfbc94be2b900af04f197d955:0"><span data-slate-zero-width="z">​</span></span></span></a><span data-key="c1b326e150d04157aacfeaed8489d4c8"><span data-offset-key="c1b326e150d04157aacfeaed8489d4c8:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7f7153481a60409ea937d5df03da8a49"><span data-offset-key="7f7153481a60409ea937d5df03da8a49:0">This Python data science cheat sheet from DataCamp is all about getting data into your code. Think about it: importing data is one of the most important tasks when working with data. Increasing your skills in this area will make you a better data scientist—and a better coder overall!</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="3825d05323c74f389ed08bd8d4f7340a"><span data-offset-key="3825d05323c74f389ed08bd8d4f7340a:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://www.cheatography.com/davechild/cheat-sheets/python/pdf/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="7a73b06d2a7142d881ea31c8456800cf"><span data-offset-key="7a73b06d2a7142d881ea31c8456800cf:0"><strong>(5) Python Cheatography Cheat Sheet</strong></span></span></a><span data-key="eb5fb93bed7641b2be6957daf12abe7c"><span data-offset-key="eb5fb93bed7641b2be6957daf12abe7c:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e8808ba00a5e47a8a4754087b85dd05b"><span data-offset-key="e8808ba00a5e47a8a4754087b85dd05b:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://www.cheatography.com/davechild/cheat-sheets/python/pdf/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="2516b64ec725414289c09a07cc0992ba"><span data-offset-key="2516b64ec725414289c09a07cc0992ba:0"><span data-slate-zero-width="z">​</span></span></span><span data-slate-void="true" data-key="b404b0ccd9f44252b34c6b9c6d40a6a7"><span><span class="reset-3c756112--frameInlineVoid-73b6a96b" data-key="b404b0ccd9f44252b34c6b9c6d40a6a7"><img src="https://blog.finxter.com/wp-content/uploads/2019/03/grafik-3.png" class="image-67b14f24--image-54d049be" /></span></span></span><span data-key="cb161ec2cb3f4fecaecafc9a03f75726"><span data-offset-key="cb161ec2cb3f4fecaecafc9a03f75726:0"><span data-slate-zero-width="z">​</span></span></span></a><span data-key="8b458cddce6e417e9fb9608fa6ecf7ad"><span data-offset-key="8b458cddce6e417e9fb9608fa6ecf7ad:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f301d0598fb2442b951e8781467359a0"><span data-offset-key="f301d0598fb2442b951e8781467359a0:0">This cheat sheet is for more advanced learners. It covers class, string and list methods as well as system calls from the sys module. Once you’re comfortable defining basic classes and command line interfaces (CLIs), get this cheat sheet. It will take you to another level.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="726dcbe9cfc145a9a354833c42f376cd"><span data-offset-key="726dcbe9cfc145a9a354833c42f376cd:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/subscribe/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="997a47f5bfdc4cf9b3df8581731eb6cb"><span data-offset-key="997a47f5bfdc4cf9b3df8581731eb6cb:0"><strong>(6) The Ultimative Python Cheat Sheet Course (5x Email Series)</strong></span></span></a><span data-key="ed23c43013d84609b430cf5ec4f55ccf"><span data-offset-key="ed23c43013d84609b430cf5ec4f55ccf:0"><span data-slate-zero-width="z">​</span></span></span></span>

<figure><img src="https://blog.finxter.com/wp-content/uploads/2019/03/CheatSheet-Python-4-Classes-791x1024.png" class="image-52799b3c" /></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a2806eafbdaa4673a908707cfd0eb739"><span data-offset-key="a2806eafbdaa4673a908707cfd0eb739:0">Want to learn Python well, but don’t have much time? Then this course is for you. It contains 5 carefully designed PDF cheat sheets. Each cheat sheet takes you one step further into the rabbit hole. You will learn practical Python concepts from the hand-picked examples and code snippets. The topics include basic keywords, simple and complex data types, crucial string and list methods, and powerful Python one-liners. If you lead a busy life and do not want to compromise on quality, this is the cheat sheet course for you!</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f96624308be54153b4f2d1d4289655b0"><span data-offset-key="f96624308be54153b4f2d1d4289655b0:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="70beddaf2e0c42b0904ea1e1820d3787"><span data-offset-key="70beddaf2e0c42b0904ea1e1820d3787:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0611860be9fd42c1bf642d25e1e6af41"><span data-offset-key="0611860be9fd42c1bf642d25e1e6af41:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="895110ef2cb346b8923ade3e174ee99f"><span data-offset-key="895110ef2cb346b8923ade3e174ee99f:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="76910fcc7e014d01ab33ebacb3fac7ff"><span data-offset-key="76910fcc7e014d01ab33ebacb3fac7ff:0"><span data-slate-zero-width="n">​</span></span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="21074f61a6f44542a287f65c2624fcd0"><span data-offset-key="21074f61a6f44542a287f65c2624fcd0:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/dq-blog-files/python-cheat-sheet-basic.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="0a8b931a79124212acdda93e319c3d74"><span data-offset-key="0a8b931a79124212acdda93e319c3d74:0"><strong>(7) Dataquest Data Science Cheat Sheet – Python Basics</strong></span></span></a><span data-key="22a59c8ff4de40ed9c43803d8d075157"><span data-offset-key="22a59c8ff4de40ed9c43803d8d075157:0"><span data-slate-zero-width="z">​</span></span></span></span>

<figure><img src="https://blog.finxter.com/wp-content/uploads/2019/11/grafik-1.png" class="image-52799b3c" /></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0f9db7bdadcd4a94adbd20b650e807e4"><span data-offset-key="0f9db7bdadcd4a94adbd20b650e807e4:0">The wonderful team at Dataquest have put together this comprehensive beginners cheat sheet. It covers all the basic data types, looping and reading files. It’s beautifully designed and is the first of a series.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="073bb7181ad44a5297dadb5a74ae729b"><span data-offset-key="073bb7181ad44a5297dadb5a74ae729b:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/dq-blog-files/python-cheat-sheet-intermediate.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="1165327d61884d028c1c24196c78808c"><span data-offset-key="1165327d61884d028c1c24196c78808c:0"><strong>(</strong></span></span></a><span data-key="bb712887dc254514b737bebd8da9e9da"><span data-offset-key="bb712887dc254514b737bebd8da9e9da:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/dq-blog-files/python-cheat-sheet-intermediate.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="ce31331a84b144e8ad23dc45d0094d5b"><span data-offset-key="ce31331a84b144e8ad23dc45d0094d5b:0"><strong>8</strong></span></span></a><span data-key="3f275e1e7c694163a6f024a077c892c0"><span data-offset-key="3f275e1e7c694163a6f024a077c892c0:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/dq-blog-files/python-cheat-sheet-intermediate.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="637d1a457b334db6b75b069f473529fb"><span data-offset-key="637d1a457b334db6b75b069f473529fb:0"><strong>) Dataquest Data Science Cheat Sheet – Intermediate</strong></span></span></a><span data-key="45a4f7ec72f540708dd5d3684b77e3d3"><span data-offset-key="45a4f7ec72f540708dd5d3684b77e3d3:0"><span data-slate-zero-width="z">​</span></span></span></span>

<figure><img src="https://blog.finxter.com/wp-content/uploads/2020/06/image-1.png" class="image-52799b3c" /></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ff0b1cf901ba4862b476e7822a50807b"><span data-offset-key="ff0b1cf901ba4862b476e7822a50807b:0">This intermediate-level cheat sheet is a follow-up of the other Dataquest cheat sheet. It contains intermediate dtype methods, looping and handling errors.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="e3271a59f70548f59bc39a6be898bfea"><span data-offset-key="e3271a59f70548f59bc39a6be898bfea:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/dq-blog-files/numpy-cheat-sheet.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="bca5d3f356fe4d5ca094522658520861"><span data-offset-key="bca5d3f356fe4d5ca094522658520861:0"><strong>(9) Dataquest NumPy</strong></span></span></a><span data-key="15d2a4df560c46b68f72572e93e91542"><span data-offset-key="15d2a4df560c46b68f72572e93e91542:0"><span data-slate-zero-width="z">​</span></span></span></span>

<figure><img src="https://blog.finxter.com/wp-content/uploads/2020/06/image-3.png" class="image-52799b3c" /></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="735344be01f44ec8ab7998cbcc9b7bef"><span data-offset-key="735344be01f44ec8ab7998cbcc9b7bef:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/numpy-tutorial/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="111ea80525e34cceaac695acdc6c37d0"><span data-offset-key="111ea80525e34cceaac695acdc6c37d0:0">NumPy </span></span></a><span data-key="438e8a69c7be4065b2325aa6e803ea49"><span data-offset-key="438e8a69c7be4065b2325aa6e803ea49:0">is at the heart of data science. Advanced libraries like scikit-learn, Tensorflow, Pandas, and Matplotlib all built on NumPy arrays. You need to understand NumPy before you can thrive in data science and machine learning. The topics of this cheat sheet are creating arrays, combining arrays, scalar math, vector math and statistics.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c75f6046743b4a588adac1f97fad59bb"><span data-offset-key="c75f6046743b4a588adac1f97fad59bb:0">This is only one great NumPy cheat sheet—if you want to get more, </span></span><a href="https://blog.finxter.com/collection-10-best-numpy-cheat-sheets-every-python-coder-must-own/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="e5df736159034ef48ba6c6667ffa0256"><span data-offset-key="e5df736159034ef48ba6c6667ffa0256:0">check out our article on the 10 best NumPy cheat sheets</span></span></a><span data-key="3f361e0259384e1780787d3d84732fb8"><span data-offset-key="3f361e0259384e1780787d3d84732fb8:0">!</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="67cf42d0e6e44710be8f7dc585b63560"><span data-offset-key="67cf42d0e6e44710be8f7dc585b63560:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Python_Bokeh_Cheat_Sheet.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="8518899a004d4f7b995291baf4f0a42d"><span data-offset-key="8518899a004d4f7b995291baf4f0a42d:0"><strong>(10) Python For Data Science (Bokeh)</strong></span></span></a><span data-key="bfecc634bf384c449ffbfaa3f6b73abf"><span data-offset-key="bfecc634bf384c449ffbfaa3f6b73abf:0"><span data-slate-zero-width="z">​</span></span></span></span>

<figure><img src="https://blog.finxter.com/wp-content/uploads/2020/06/image-4.png" class="image-52799b3c" /></figure>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="17564b23f91c4766a1548be16636eabf"><span data-offset-key="17564b23f91c4766a1548be16636eabf:0">Want to master the visualization library </span></span><a href="https://docs.bokeh.org/en/latest/index.html" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="074a18ee38704ac7b67b78272eec807a"><span data-offset-key="074a18ee38704ac7b67b78272eec807a:0">Bokeh</span></span></a><span data-key="26ea507e74b7419c86ee50f2f1ba75aa"><span data-offset-key="26ea507e74b7419c86ee50f2f1ba75aa:0">? This cheat sheet is for you! It contains all the basic Bokeh commands to get your beautiful visualizations going fast!</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="193f8ef731bd4196ad0708e97b226433"><span data-offset-key="193f8ef731bd4196ad0708e97b226433:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://drive.google.com/file/d/1UHK8wtWbADvHKXFC937IS6MTnlSZC_zB/view" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="f0ee0e6b10c74319a97d0d1aa2a9d8e9"><span data-offset-key="f0ee0e6b10c74319a97d0d1aa2a9d8e9:0"><strong>(11) Pandas Cheat Sheet for Data Science</strong></span></span></a><span data-key="b4e020dd9b0b48c39c104fbbd1ced8a3"><span data-offset-key="b4e020dd9b0b48c39c104fbbd1ced8a3:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3ba11b5db8cb4e01ba2185e3de97bcb8"><span data-offset-key="3ba11b5db8cb4e01ba2185e3de97bcb8:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://drive.google.com/file/d/1UHK8wtWbADvHKXFC937IS6MTnlSZC_zB/view" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="86e9d3c8b1074016a4bc2cb30c7fd397"><span data-offset-key="86e9d3c8b1074016a4bc2cb30c7fd397:0"><span data-slate-zero-width="z">​</span></span></span><span data-slate-void="true" data-key="220aad7a0aba4a9d9223becce2946094"><span><span class="reset-3c756112--frameInlineVoid-73b6a96b" data-key="220aad7a0aba4a9d9223becce2946094"><img src="https://blog.finxter.com/wp-content/uploads/2020/06/image-5.png" class="image-67b14f24--image-54d049be" /></span></span></span><span data-key="a181b7ada58a4135bc049968ec2d4835"><span data-offset-key="a181b7ada58a4135bc049968ec2d4835:0"><span data-slate-zero-width="z">​</span></span></span></a><span data-key="c06b922fc70e4821867ca6619279a2e6"><span data-offset-key="c06b922fc70e4821867ca6619279a2e6:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7cccab3362fa47eb8355138b8c85114a"><span data-offset-key="7cccab3362fa47eb8355138b8c85114a:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://pandas.pydata.org/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="e7cc45cb224d4644b6bff6d4395385dd"><span data-offset-key="e7cc45cb224d4644b6bff6d4395385dd:0">Pandas </span></span></a><span data-key="9f87c174c31b4dce9dfee153bcaf00d5"><span data-offset-key="9f87c174c31b4dce9dfee153bcaf00d5:0">is everywhere. If you want to master </span><span data-offset-key="9f87c174c31b4dce9dfee153bcaf00d5:1">*“the Excel library for Python coders”*</span><span data-offset-key="9f87c174c31b4dce9dfee153bcaf00d5:2">, why not start with this cheat sheet? It’ll get you started fast and introduces the most important Pandas functions to you.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="938662a4b990473787a247e9657383d2"><span data-offset-key="938662a4b990473787a247e9657383d2:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/pandas-cheat-sheets/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="4ab8526f9af64fc28ab62e68121e9aac"><span data-offset-key="4ab8526f9af64fc28ab62e68121e9aac:0">You can find a best-of article about the </span></span></a><span data-key="308c12bb80a34de9b1c0b50002fad871"><span data-offset-key="308c12bb80a34de9b1c0b50002fad871:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/pandas-cheat-sheets/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="107c2d0b129b4c04b32c7ce6eb0d2e94"><span data-offset-key="107c2d0b129b4c04b32c7ce6eb0d2e94:0">7</span></span></a><span data-key="5b1a0f0c79c04fbb8585a9e485e483f4"><span data-offset-key="5b1a0f0c79c04fbb8585a9e485e483f4:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/pandas-cheat-sheets/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="93fd2aa275644b2fbc329ac306e1aa90"><span data-offset-key="93fd2aa275644b2fbc329ac306e1aa90:0"> best Pandas Cheat Sheets here.</span></span></a><span data-key="c95e7e091e7e4ab38f3304111474d460"><span data-offset-key="c95e7e091e7e4ab38f3304111474d460:0"><span data-slate-zero-width="z">​</span></span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="3ee2930fd6d94c03a68d959e0e9249e1"><span data-offset-key="3ee2930fd6d94c03a68d959e0e9249e1:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://www.dataquest.io/wp-content/uploads/2019/03/python-regular-expressions-cheat-sheet.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="97f6ca2ee2854b428113dea7d9090e33"><span data-offset-key="97f6ca2ee2854b428113dea7d9090e33:0"><strong>(12) Regular Expressions Cheat Sheet</strong></span></span></a><span data-key="3f5777f41c184e99a834010b60d3057b"><span data-offset-key="3f5777f41c184e99a834010b60d3057b:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="23cce056bba14fa6bb613c84e6d35463"><span data-offset-key="23cce056bba14fa6bb613c84e6d35463:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://www.dataquest.io/wp-content/uploads/2019/03/python-regular-expressions-cheat-sheet.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="61f753bc9bf7497fb412f2f58e564bab"><span data-offset-key="61f753bc9bf7497fb412f2f58e564bab:0"><span data-slate-zero-width="z">​</span></span></span><span data-slate-void="true" data-key="885fa0e05b0d4ae4be4659e00922a794"><span><span class="reset-3c756112--frameInlineVoid-73b6a96b" data-key="885fa0e05b0d4ae4be4659e00922a794"><img src="https://blog.finxter.com/wp-content/uploads/2020/06/image-6.png" class="image-67b14f24--image-54d049be" /></span></span></span><span data-key="900088f24fce4538a41c86d2a0a4c50e"><span data-offset-key="900088f24fce4538a41c86d2a0a4c50e:0"><span data-slate-zero-width="z">​</span></span></span></a><span data-key="965a4015cc654069b481493f25b9c6f0"><span data-offset-key="965a4015cc654069b481493f25b9c6f0:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="07838c145bd3488482983ea77fcf934c"><span data-offset-key="07838c145bd3488482983ea77fcf934c:0">Regex to the rescue! </span></span><a href="https://blog.finxter.com/python-regex/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="df34532daf874910b9ee3681ac39da0e"><span data-offset-key="df34532daf874910b9ee3681ac39da0e:0">Regular expressions</span></span></a><span data-key="609449f26f01469d900b51b3197c0ede"><span data-offset-key="609449f26f01469d900b51b3197c0ede:0"> are wildly important for anyone who handles large amounts of text programmatically (ask Google). This cheat sheet introduces the most important Regex commands for quick reference. Download & master these regular expressions!</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="609c14e8450c4b1c85d3947184a37fab"><span data-offset-key="609c14e8450c4b1c85d3947184a37fab:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/wp-content/uploads/2020/07/Finxter_WorldsMostDensePythonCheatSheet.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="0b4083f07c9445f39146588169a3fc62"><span data-offset-key="0b4083f07c9445f39146588169a3fc62:0">(13) The World’s Most Concise Python Cheat Sheet</span></span></a><span data-key="861b4a1fd6ce4c19a33834bc46b69975"><span data-offset-key="861b4a1fd6ce4c19a33834bc46b69975:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6809429429ab4738a01e2d2a1e7fb9dc"><span data-offset-key="6809429429ab4738a01e2d2a1e7fb9dc:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://blog.finxter.com/wp-content/uploads/2020/07/Finxter_WorldsMostDensePythonCheatSheet.pdf" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="22ac6bd4feef44f587489e7b15f9cf22"><span data-offset-key="22ac6bd4feef44f587489e7b15f9cf22:0"><span data-slate-zero-width="z">​</span></span></span><span data-slate-void="true" data-key="ee27f10d6317400b9c0ecfdfdd0f4fbb"><span><span class="reset-3c756112--frameInlineVoid-73b6a96b" data-key="ee27f10d6317400b9c0ecfdfdd0f4fbb"><img src="https://blog.finxter.com/wp-content/uploads/2020/07/Finxter_WorldsMostDensePythonCheatSheet.jpg" alt="Python Ultimate Cheat Sheet" class="image-67b14f24--image-54d049be" /></span></span></span><span data-key="bac8658bd95e43b0ac27cde2e890bc60"><span data-offset-key="bac8658bd95e43b0ac27cde2e890bc60:0"><span data-slate-zero-width="z">​</span></span></span></a><span data-key="10d78fd10dbc4f928c31e2df73632fd9"><span data-offset-key="10d78fd10dbc4f928c31e2df73632fd9:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="677746abfc7d4a278effaf64b1b2b474"><span data-offset-key="677746abfc7d4a278effaf64b1b2b474:0">This cheat sheet is the most concise Python cheat sheet in the world. It contains keywords, basic data structures, and complex data structures—all in a single 1-page PDF file. If you’re lazy, this cheat sheet is a must!</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e135de2b0aec4d5084eb7df93ec6606c"><span data-offset-key="e135de2b0aec4d5084eb7df93ec6606c:0">*If you love cheat sheets, here are some interesting references for you (lots of more PDF downloads):*</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b8937f3116ff40819d170d1a4890a175"><span data-offset-key="b8937f3116ff40819d170d1a4890a175:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0eff85072944488c8efdabb95f017fb3"><span data-offset-key="0eff85072944488c8efdabb95f017fb3:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bd3a9b107d004450a342cbefe1cd7326"><span data-offset-key="bd3a9b107d004450a342cbefe1cd7326:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3cd4a258ee54464c89ded3a2cbc1d5b9"><span data-offset-key="3cd4a258ee54464c89ded3a2cbc1d5b9:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f0102d4c023c408abc54be45c5af6461"><span data-offset-key="f0102d4c023c408abc54be45c5af6461:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1f57de01be3f4748bd533e5a91b0f6e6"><span data-offset-key="1f57de01be3f4748bd533e5a91b0f6e6:0"><span data-slate-zero-width="n">​</span></span></span></span>

<a href="untitled-1.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">quick-reference - Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">index</span>

<a href="../stdlib/basic-syntax.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next - Python-Docs</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Basic Syntax</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 3 hours ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/quick-reference/bash-commands.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>
